# bitnami-tui

./: .gitignore  BUILD.bazel  Dockerfile  README.md  app.go  build.sh  commands.go  go.mod  go.sum  print.go  progressbar.go  tmp
Godeps/: Godeps.json
jenkins/: Jenkinsfile
testcommands/: args.sh  waitok.sh
tests/: arguments.expect  arguments.sh  bnhelper.json  btui.json  exit.sh  properties.ini  return.sh  simpleCommand.expect  simpleCommand.sh  submenu.expect  submenu.sh  test.sh  tui.json
