# gazelle:prefix github.com/jotamartos/bnhelper
# gazelle:proto disable_global

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
)

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "github.com/jotamartos/bnhelper",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/go-ini/ini:go_default_library",
        "//vendor/github.com/jotamartos/tui:go_default_library",
    ],
)

go_binary(
    name = "bnhelper-windows",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    out = "bnhelper-windows-x64.exe",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"main.version": "{STABLE_VERSION}"},
)

go_binary(
    name = "bnhelper-osx",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    out = "bnhelper-osx-x64",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"main.version": "{STABLE_VERSION}"},
)

go_binary(
    name = "bnhelper-linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    out = "bnhelper-linux-x64.run",
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"main.version": "{STABLE_VERSION}"},
)
